# webservice_hidro

./: .gitignore  README.md  hidro2csv.py  pyproject.toml  setup.py  webservice_hidro.py
src/: hidro2csv.py  webservice_hidro.py
tests/: test_webservice_hidro.py
