[tool.poetry]
name = "webservice-hidro"
version = "0.1.0"
description = "Download hydrological data from Hidroweb-ANA Webservice"
authors = ["mvcastro <mvcastro1975@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
requests = "^2.32.3"
numpy = "^2.1.3"
geopandas = "^1.0.1"
pandas-stubs = "^2.3.0.250703"


[tool.poetry.group.dev.dependencies]
matplotlib = "^3.9.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
